logs/fdleakfinder.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fdleakfinder'...
Compiling './lib/python3.5/site-packages/fdleakfinder/fdleakfinder.py'...
***   File "./lib/python3.5/site-packages/fdleakfinder/fdleakfinder.py", line 99
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fdleakfinder-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyutil'...
Compiling './lib/python3.5/site-packages/pyutil/PickleSaver.py'...
***   File "./lib/python3.5/site-packages/pyutil/PickleSaver.py", line 17
    import .fileutil
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyutil/benchutil.py'...
***   File "./lib/python3.5/site-packages/pyutil/benchutil.py", line 201
    print "best: %(best)#8.03e, %(mp1)3dth-best: %(mth-best)#8.03e, mean: %(mean)#8.03e, %(mp1)3dth-worst: %(mth-worst)#8.03e, worst: %(worst)#8.03e (of %(num)6d)" % res
                                                                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyutil/cache.py'...
***   File "./lib/python3.5/site-packages/pyutil/cache.py", line 155
    raise KeyError, k
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyutil/data'...
Compiling './lib/python3.5/site-packages/pyutil/dictutil.py'...
***   File "./lib/python3.5/site-packages/pyutil/dictutil.py", line 19
    raise KeyError, k
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyutil/memutil.py'...
***   File "./lib/python3.5/site-packages/pyutil/memutil.py", line 11
    import .mathutil
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyutil/nummedobj.py'...
***   File "./lib/python3.5/site-packages/pyutil/nummedobj.py", line 6
    import .dictutil
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyutil/scripts'...
Compiling './lib/python3.5/site-packages/pyutil/scripts/memdump2dot.py'...
***   File "./lib/python3.5/site-packages/pyutil/scripts/memdump2dot.py", line 27
    except Exception, le:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyutil/scripts/randcookie.py'...
***   File "./lib/python3.5/site-packages/pyutil/scripts/randcookie.py", line 30
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyutil/scripts/try_decoding.py'...
***   File "./lib/python3.5/site-packages/pyutil/scripts/try_decoding.py", line 88
    print "%19s" % codec,
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyutil/scripts/verinfo.py'...
***   File "./lib/python3.5/site-packages/pyutil/scripts/verinfo.py", line 13
    raise UsageError, "USAGE: verinfo DISTRIBUTIONNAME [PACKAGENAME]"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyutil/test'...
Listing './lib/python3.5/site-packages/pyutil/test/current'...
Listing './lib/python3.5/site-packages/pyutil/test/current/json_tests'...
Listing './lib/python3.5/site-packages/pyutil/test/deprecated'...
Compiling './lib/python3.5/site-packages/pyutil/test/deprecated/test_picklesaver.py'...
***   File "./lib/python3.5/site-packages/pyutil/test/deprecated/test_picklesaver.py", line 11
    except ImportError, le:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyutil/test/out_of_shape'...
Compiling './lib/python3.5/site-packages/pyutil/test/out_of_shape/test_cache.py'...
***   File "./lib/python3.5/site-packages/pyutil/test/out_of_shape/test_cache.py", line 17
    print klass
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyutil/test/out_of_shape/test_odict.py'...
***   File "./lib/python3.5/site-packages/pyutil/test/out_of_shape/test_odict.py", line 15
    print klass
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyutil/xor'...
Compiling './lib/python3.5/site-packages/pyutil/zlibutil.py'...
***   File "./lib/python3.5/site-packages/pyutil/zlibutil.py", line 79
    raise UnsafeDecompressError, "used up roughly maxmem memory. maxmem: %s, len(zbuf): %s, offset: %s, decomplen: %s, lencompbite: %s" % tuple(map(hr, [maxmem, len(zbuf), offset, decomplen, lencompbite,]))
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyutil-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './pyutil'...
Listing './pyutil/data'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/fdleakfinder'...
Listing './share/doc/pyutil'...
Listing './share/python-wheels'...
